--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,112 @@
-/* You can add global styles to this file, and also import other style files */
+/* GLOBAL  */
+html {
+    font-size: 16px;
+    font-family: 'Roboto', sans-serif;
+    background: rgb(236, 236, 236);
+    margin: 0;
+    padding: 0;
+}
+
+body{
+    margin: 0;
+    padding: 0;
+}
+
+:root {
+    --sita-green: #2B3E2B;
+    --off-white: #ECECEC;
+}
+
+.container{
+    width: 1100px;
+    margin: 0 auto;
+}
+
+img{
+    max-width: 100%;
+}
+
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6{
+    margin: 0;
+    padding: 0;
+}
+
+a{
+    color: var(--off-white);
+    text-decoration: none;
+}
+
+
+.flex{
+    display: flex;
+}
+
+.flex.column{
+    flex-direction: column;
+}
+
+.material-symbols-outlined {
+  font-variation-settings:
+  'FILL' 0,
+  'wght' 400,
+  'GRAD' 0,
+  'opsz' 24;
+}
+
+/* PADDING CLASSES */
+@media screen {
+    .padding-10-top{
+        padding-top: 10px;
+    }
+    
+    .padding-10-bottom{
+        padding-bottom: 10px;
+    }
+    
+    .padding-20-top{
+        padding-top: 20px;
+    }
+    
+    .padding-20-bottom{
+        padding-bottom: 20px;
+    }
+    
+    .padding-30-top{
+        padding-top: 30px;
+    }
+    
+    .padding-30-bottom{
+        padding-bottom: 30px;
+    }
+    
+    .padding-40-top{
+        padding-top: 40px;
+    }
+    
+    .padding-40-bottom{
+        padding-bottom: 40px;
+    }
+    
+    .padding-50-top{
+        padding-top: 50px;
+    }
+    
+    .padding-50-bottom{
+        padding-bottom: 50px;
+    }
+}
+
+
+/* MOBILE */
+@media screen and (max-width: 768px){
+    .container{
+        width: 100%;
+        padding: 0 20px;
+    }
+}
